--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "firebase": "^9.17.2",
+    "formik": "^2.2.9",
     "iron-session": "^6.3.1",
     "next": "13.2.3",
     "next-redux-wrapper": "^8.1.0",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "typescript": "4.9.5",
+    "yup": "^1.0.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
