--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
@@ -18,17 +22,20 @@
     "eslint-config-next": "13.2.3",
     "firebase": "^9.17.2",
     "formik": "^2.2.9",
+    "framer-motion": "^10.6.0",
     "iron-session": "^6.3.1",
     "next": "13.2.3",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-headroom": "^3.2.1",
     "react-redux": "^8.0.5",
     "typescript": "4.9.5",
     "yup": "^1.0.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/react-headroom": "^3.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
