--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/react-headroom": "^3.2.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.7"
   }
 }
