--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-headroom": "^3.2.1",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "typescript": "4.9.5",
     "yup": "^1.0.2",
